Initial commit - pushing local project to existing GitHub repo

--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
   "domain": "creality_connect",
   "name": "Creality Connect",
-  "codeowners": ["@creality"],
+  "codeowners": ["@shihanpietersz"],
   "config_flow": true,
-  "documentation": "https://github.com/yourusername/creality-connect",
+  "documentation": "https://github.com/shihanpietersz/creality_connect",
   "iot_class": "local_push",
-  "issue_tracker": "https://github.com/yourusername/creality-connect/issues",
+  "issue_tracker": "https://github.com/shihanpietersz/creality_connect/issues",
   "requirements": ["aiohttp>=3.8.0", "websockets>=10.0"],
   "version": "1.0.0",
   "dependencies": [],
